# qdrant-rag

./: .env.example  .gitignore  INSTALL.md  Makefile  README.md  config.yaml  makefile  pyproject.toml  qdrant_rag.py  setup.py
deprecated/: install.sh.old
test_docs/: rag_overview.md  vector_databases.md
