[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-rag"
version = "1.0.0"
description = "Qdrant RAG Pipeline for AMD 9950X3D + RTX 5070 Ti"
requires-python = ">=3.9"
dependencies = [
  # Core Pipeline & DB
  "qdrant-client>=1.15.0",
  "google-genai>=0.5.0",
  "numpy>=1.26.0",
  "psutil>=5.9.0",
  "aiohttp>=3.9.0",
  "pynvml>=11.5.0",
  "scikit-learn>=1.4.0",
  # Document Processing & Chunking
  "unstructured[all-docs]>=0.14.0",
  "llama-index-core>=0.10.45",
  "llama-index-embeddings-google-genai>=0.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "text-dedup>=0.0.8",
  "datasketch>=1.6.0",
  # Embeddings & Reranking (GPU-enabled)
  "fastembed-gpu>=0.4.0",
  "onnxruntime-gpu>=1.18.0",
  "sentence-transformers>=2.6.0"
]

[project.scripts]
pipeline = "qdrant_rag:main_cli"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP" # pyupgrade
]
ignore = [
  "E501" # line too long, handled by formatter
]

