[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "qdrant_rag"  # Main script is its own build backend!
backend-path = ["."]

[tool.setuptools]
py-modules = ["qdrant_rag"]
packages = []

[project]
name = "qdrant-rag"
version = "1.0.0"
description = "Qdrant RAG Pipeline for AMD 9950X3D + RTX 5070 Ti"
requires-python = ">=3.9"
dependencies = [
  # Note: All dependencies are managed via 'make install'
  # Running 'pip install -e .' triggers make install automatically
]

[project.scripts]
pipeline = "qdrant_rag:main_cli"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP" # pyupgrade
]
ignore = [
  "E501" # line too long, handled by formatter
]

